fixed disappearing header on mobile anchor

--- a/src/sass/tailwind.admin.scss
+++ b/src/sass/tailwind.admin.scss
@@ -38,3 +38,6 @@ code {
     right: 10px;
   }
 }
+* {
+  scroll-behavior: smooth;
+}
